kubernetes/services/booksonic.yml
---
apiVersion: v1
kind: Service
metadata:
  name: booksonic
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 4040
  selector:
    app: booksonic

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksonic
  namespace: default
spec:
  tls:
    - hosts:
        - booksonic.${DOMAIN_NAME}
      secretName: wilcard-main-domain-tls
  rules:
    - host: booksonic.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booksonic
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksonic
  namespace: default
  labels:
    app: booksonic
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booksonic
  template:
    metadata:
      labels:
        app: booksonic
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/booksonic-air
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 4040
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          hostPath:
            path: /storage/booksonic/config
        - name: media
          hostPath:
            path: /storage/booksonic/media
